--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,71 @@
-# Created by https://www.toptal.com/developers/gitignore/api/java,gradle,node,nextjs
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,node,nextjs
+# Created by https://www.toptal.com/developers/gitignore/api/nextjs,eclipse,node
+# Edit at https://www.toptal.com/developers/gitignore?templates=nextjs,eclipse,node
 
-### Java ###
-# Compiled class file
-*.class
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
 
-# Log file
-*.log
+# External tool builders
+.externalToolBuilders/
 
-# BlueJ files
-*.ctxt
+# Locally stored "Eclipse launch configurations"
+*.launch
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# CDT-specific (C/C++ Development Tooling)
+.cproject
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# CDT- autotools
+.autotools
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific (PHP Development Tools)
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# Tern plugin
+.tern-project
+
+# TeXlipse plugin
+.texlipse
+
+# STS (Spring Tool Suite)
+.springBeans
+
+# Code Recommenders
+.recommenders/
+
+# Annotation Processing
+.apt_generated/
+.apt_generated_test/
+
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
+.scala_dependencies
+.worksheet
+
+# Uncomment this line if you wish to ignore the project description file.
+# Typically, this file would be tracked if it contains build/dependency configurations:
+#.project
+
+### Eclipse Patch ###
+# Spring Boot Tooling
+.sts4-cache/
 
 ### NextJS ###
 # dependencies
@@ -66,6 +106,7 @@ next-env.d.ts
 ### Node ###
 # Logs
 logs
+*.log
 lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
@@ -197,31 +238,4 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
-### Gradle ###
-.gradle
-**/build/
-!src/**/build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
-
-# Cache of project
-.gradletasknamecache
-
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
-### Gradle Patch ###
-# Java heap dump
-*.hprof
-
-# End of https://www.toptal.com/developers/gitignore/api/java,gradle,node,nextjs
+# End of https://www.toptal.com/developers/gitignore/api/nextjs,eclipse,node
